--- a/ch8_3.ipynb
+++ b/ch8_3.ipynb
@@ -31,6 +31,154 @@
    "source": [
     "卷积网络：底层表达局部信息，高层表达整体信息。因此卷积的内容是否相似，可以从高层中计算得到；风格是否相似，可以从底层中计算得到。"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7017b1d5-375f-4c01-807a-633436faba4c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras.preprocessing.image import load_img, img_to_array\n",
+    "\n",
+    "\n",
+    "target_image_path = 'img/portrait.jpg'\n",
+    "style_reference_image_path = 'img/transfer_style_reference.jpg'\n",
+    "width, height = load_img(target_image_path).size\n",
+    "img_height = 400\n",
+    "img_width = int(width * img_height / height)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9abda52e-4dc3-47a9-af4d-25d1995dc31b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from keras.applications import vgg19\n",
+    "\n",
+    "\n",
+    "def preprocess_image(image_path):\n",
+    "    img = load_img(image_path, target_size=(img_height, img_width))\n",
+    "    img = img_to_array(img)\n",
+    "    img = np.expand_dims(img, axis=0)\n",
+    "    img = vgg19.preprocess_input(img)\n",
+    "    return img\n",
+    "\n",
+    "\n",
+    "def deprocess_image(x):\n",
+    "    x[:, :, 0] += 103.939\n",
+    "    x[:, :, 1] += 116.779\n",
+    "    x[:, :, 2] += 123.68\n",
+    "    x = x[:, :, ::-1]\n",
+    "    x = np.clip(x, 0, 255).astype('uint8')\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7f670f14-8f4b-4b74-8a5c-5ca76c47f40a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from keras import backend as K\n",
+    "\n",
+    "\n",
+    "target_image = K.constant(preprocess_image(target_image_path))\n",
+    "style_reference_image = K.constant(preprocess_image(style_reference_image_path))\n",
+    "combination_image = K.placeholder((1, img_height, img_width, 3))\n",
+    "input_tensor = K.concatenate([target_image,\n",
+    "                              style_reference_image,\n",
+    "                              combination_image], axis=0)\n",
+    "model = vgg19.VGG19(input_tensor=input_tensor,\n",
+    "                    weights='imagenet',\n",
+    "                    include_top=False)\n",
+    "print('Model loaded.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb22a842-1e38-4964-9808-9e941236c6c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def content_loss(base, combination):\n",
+    "    return K.sum(K.square(combination - base))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf89fc90-1286-439c-bfb9-8a47358da308",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gram_matrix(x):\n",
+    "    features = K.batch_flatten(K.permute_dimensions(x, (2, 0, 1)))\n",
+    "    gram = K.dot(features, K.transpose(features))\n",
+    "    return gram\n",
+    "\n",
+    "\n",
+    "def style_loss(style, combination):\n",
+    "    S = gram_matrix(style)\n",
+    "    C = gram_matrix(combination)\n",
+    "    channels = 3\n",
+    "    size = img_height * img_width\n",
+    "    return K.sum(K.square(S - C)) / (4. * (channels ** 2) * (size ** 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d65689c4-e483-475d-b3b4-68688fef8d21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def total_variation_loss(x):\n",
+    "    a = K.square(\n",
+    "        x[:, :img_height - 1, :img_width - 1, :] -\n",
+    "        x[:, 1:, :img_width - 1, :])\n",
+    "    b = K.square(\n",
+    "        x[:, :img_height - 1, :img_width - 1, :] -\n",
+    "        x[:, :img_height - 1, 1:, :])\n",
+    "    return K.sum(K.pow(a + b, 1.25))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a341ccd6-f338-43bf-b506-dcd4b9225819",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "outputs_dict = dict([(layer.name, layer.output) for layer in model.layers])\n",
+    "content_layer = 'block5_conv2'\n",
+    "style_layers = ['block1_conv1',\n",
+    "                'block2_conv1',\n",
+    "                'block3_conv1',\n",
+    "                'block4_conv1',\n",
+    "                'block5_conv1']\n",
+    "total_variation_weight = 1e-4\n",
+    "style_weight = 1.\n",
+    "content_weight = 0.025\n",
+    "loss = K.variable(0.)\n",
+    "layer_features = outputs_dict[content_layer]\n",
+    "target_image_features = layer_features[0, :, :, :]\n",
+    "combination_features = layer_features[2, :, :, :]\n",
+    "loss += content_weight * content_loss(target_image_features,\n",
+    "                                      combination_features)\n",
+    "for layer_name in style_layers:\n",
+    "    layer_features = outputs_dict[layer_name]\n",
+    "    style_reference_features = layer_features[1, :, :, :]\n",
+    "    combination_features = layer_features[2, :, :, :]\n",
+    "    sl = style_loss(style_reference_features, combination_features)\n",
+    "    loss += (style_weight / len(style_layers)) * sl\n",
+    "loss += total_variation_weight * total_variation_loss(combination_image)"
+   ]
   }
  ],
  "metadata": {
